kubernetes/apps/default/home-assistant/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: default
subsets:
  - addresses:
      - ip: 10.20.0.149
    ports:
      - name: http
        port: 8123
